changed loading, and start message

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   </style>
   <body>
     <script> popupku(); </script>
-    <div class="preload"><p>Loading dulu . . .</p></div>
+    <div class="preload"><p>Loading survey . . .</p></div>
     <div class="ucapan">
 
-      <p>Click me!</p>
+      <p>Press me to start the survey!</p>
       <p>Selamat ulang tahun Mel !</p>
       <p>Semoga...</p>
       <p>Tambah beriman</p>
@@ -37,7 +37,7 @@
 
       musik = "music.mp3";
       foto = "foto.jpg";
-      txtFoto = "I Love You";
+      txtFoto = "";
       nomorWA = "";
 
       stiker = "";
@@ -56,11 +56,7 @@
       <div class="modal">
         <div class="frame">
           <img class="foto" src="./foto.jpg" alt="" />
-            <p class="txtFrame">Selamat Ulang tahun ya mel ! </p>
-        </div>
-        <div class="frame">
-          <img class="foto" src="./foto.jpg" alt="" />
-            <p class="txtFrame">Selamat Ulang tahun ya mel ! </p>
+            <p class="txtFrame">Selamat Ulang tahun ya mel! </p>
         </div>
       </div>
     </div>
