--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <h3>gw mau memberitahu lu betapa berterima kasih gw bisa kenal lu. Gw harap tahun
              ini bakal penuh dengan cinta, tawa, dan semua keinginan hati.</h3>
           <!-- <p>gw mau mengambil sebentar untuk memberitahu lu betapa berterima kasih gw bisa kenal lu. lu  membawa begitu banyak kegembiraan dan positivity ke dalam kehidupan ini, dan gw benar-benar bersyukur bisa mengenal dan menjadi teman lu. Gw harap tahun depan penuh dengan cinta, tawa, dan semua keinginan hati.</p> -->
-          <p>Lots of love, Andrew Adi</p>
+          <p>Warmest Regards, Andrew Adi</p>
         </div>
       </div>
     </div>
